--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/gdata.js" defer></script>
         <script src="js/addons.js" defer></script>
         <script src="js/index.js" defer></script>
-        <script src="https://spreadsheets.google.com/feeds/list/1CXdwQqNm5nqBDDfZcEoG90SLHAtb-mfMH4eAjDrFAMY/1816064743/public/values?alt=json-in-script&callback=$index.onSpreadsheet" defer></script>
+        <script src="https://spreadsheets.google.com/feeds/list/1CXdwQqNm5nqBDDfZcEoG90SLHAtb-mfMH4eAjDrFAMY/1816064743/public/values?alt=json-in-script&amp;callback=$index.onSpreadsheet" defer></script>
         </head>
     <body>
         <div class="col-md-3">
@@ -23,9 +23,11 @@
         <div class="col-md-7">
             <table class="table table-hover">
                 <thead>
-                    <th>Addon</th>
-                    <th>Compatible?</th>
-                    <th>Bug #</th>
+                    <tr>
+                        <th>Addon</th>
+                        <th>Compatible?</th>
+                        <th>Bug #</th>
+                    </tr>
                 </thead>
                 <tbody id="tbody">
                 </tbody>
