--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js" defer></script>
         <script src="js/bz-0.2.4.js" defer></script>
+        <script src="js/bugz.js" defer></script>
         <script src="js/gdata.js" defer></script>
         <script src="js/addons.js" defer></script>
         <script src="js/index.js" defer></script>
