Add add-on testing instructions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <body>
         <div class="col-md-3">
             <h1>Are your add-ons e10s compatible?</h1>
+            <p>To test an add-on, <a href="https://nightly.mozilla.org/">install Firefox Nightly</>, confirm that the add-on works in Firefox Nightly as expected, use the File menu to open a new e10s window, then confirm that the add-on still works in the e10s window as expected. If the add-on works, then click the "it works" link below to tell Mozilla! If the add-on behaved differently in the e10s window, then click the "Report bug" link below. Please include a description of what you <i>expected</i> to happen, what actually happened, and steps to reproduce the problem.</p>
         </div>
         <div class="col-md-7">
             <table class="table table-hover">
