--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <body>
         <div class="col-md-3">
             <h1>Are your add-ons e10s compatible?</h1>
+            <p>To test an add-on:</p>
+            <ol>
+                <li><a href="https://nightly.mozilla.org/">Install Firefox Nightly</a>.</li>
+                <li>Confirm that the add-on works in Firefox Nightly as expected.</li>
+                <li>Use the File menu or "hamburger" toolbar button to open a new e10s window.</li>
+                <li>Confirm that the add-on still works in the e10s window as expected.</li>
+            </ol>
+            <p><b>If the add-on works as expected,</b> then click the add-on's "it works" link below to tell Mozilla!</p>
+            <p><b>If the add-on behaves differently in the e10s window,</b> then click the add-on's "Report bug" link below. Please include a description of what you <i>expected</i> to happen, what actually happened, and steps to reproduce the problem.</p>
         </div>
         <div class="col-md-7">
             <table class="table table-hover">
