Draw linear regression predicting future bug counts and remaining days

--- a/burndown.html
+++ b/burndown.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js" defer></script>
         <script src="js/c3-0.3.0/c3.min.js" defer></script>
+        <script src="js/simple_statistics-0.9.0.js" defer></script>
         <script src="js/bz-0.2.4.js" defer></script>
         <script src="js/bugz.js" defer></script>
         <script src="js/burndown.js" defer></script>
