Remove default username

--- a/burndown.html
+++ b/burndown.html
@@ -16,7 +16,7 @@
         </head>
     <body>
         <div>
-            Bugzilla Username: <input type="text" id="username" value="bugzilla@example.com">
+            Bugzilla Username: <input type="text" id="username">
             Password: <input type="password" id="password" value="">
             Bug: <input type="text" id="bug" value="997462">
             <button id="button">Burninate</button>
