Change bug number to tracking-e10s field

--- a/burndown.html
+++ b/burndown.html
@@ -18,7 +18,7 @@
         <div>
             Bugzilla Username: <input type="text" id="username">
             Password: <input type="password" id="password" value="">
-            Bug: <input type="text" id="bug" value="997462">
+            tracking-e10s: <input type="text" id="bug" value="m2+">
             <button id="button">Burninate</button>
         </div>
         <div id="chart"></div>
