--- a/burndown.html
+++ b/burndown.html
@@ -4,11 +4,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Burndown</title>
         <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="stylesheet" href="js/c3-0.3.0/c3.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.3.0/c3.min.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js" defer></script>
-        <script src="js/c3-0.3.0/c3.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.3.0/c3.min.js" defer></script>
         <script src="js/simple_statistics-0.9.0.js" defer></script>
         <script src="js/bz-0.3.0.js" defer></script>
         <script src="js/bugz.js" defer></script>
