Improved tracking-e10s burndown

--- a/burndown.html
+++ b/burndown.html
@@ -13,12 +13,14 @@
         <script src="js/bz-0.3.0.js" defer></script>
         <script src="js/bugz.js" defer></script>
         <script src="js/burndown.js" defer></script>
-        </head>
+    </head>
     <body>
         <div>
+<!--
             Bugzilla Username: <input type="text" id="username">
             Password: <input type="password" id="password" value="">
-            tracking-e10s: <input type="text" id="bug" value="m2+">
+-->
+            tracking-e10s: <input type="text" id="tracking_e10s" value="m4+">
             <button id="button">Burninate</button>
         </div>
         <div id="chart"></div>
